minio/minio-external-service.yaml
# Can be ignored
# Not required if we use minio-service.yaml which also exposes 9090 for web UI
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: minio-dev
spec:
  ports:
    - protocol: "TCP"
      port: 9000
      targetPort: 9000
  selector:
    app: minio
