minio/ingress.yaml
# Can be ignored
# Not required if we use minio-dev.yaml
# See https://kubernetes.io/docs/concepts/services-networking/ingress/
#
# This example uses the kubernetes-ingress.
# See https://github.com/nginxinc/kubernetes-ingress/blob/master/examples/complete-example/cafe-ingress.yaml
# for a sample specification.
#
# Prior to using this, you must install the ingress controller software using ( e.g. )
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.0.4/deploy/static/provider/cloud/deploy.yaml
# as shown at https://kubernetes.github.io/ingress-nginx/deploy/#docker-desktop
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: default
spec:
  ingressClassName: "nginx"
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio
            port:
              number: 9000
